--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,57 @@
-version: '3.8'
-
 services:
   web:
-    build: ./frontend
+    build:
+      context: .
+      dockerfile: Dockerfile.web
     ports:
-      - "3000:3000"
+      - "${WEB_PORT:-3000}:3000"
     env_file: .env
+    depends_on:
+      - api
+      - ai-service
 
   api:
-    build: ./backend
+    build:
+      context: .
+      dockerfile: Dockerfile.api
     ports:
-      - "4000:4000"
+      - "${API_PORT:-4000}:4000"
     env_file: .env
     depends_on:
       - db
 
   ai-service:
-    build: ./ai-service
+    build:
+      context: .
+      dockerfile: Dockerfile.ai
     ports:
-      - "5000:5000"
+      - "${AI_PORT:-5000}:5000"
     env_file: .env
+    depends_on:
+      - api
 
   db:
     image: postgres:14
+    secrets:
+      - db_password
     environment:
-      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_PASSWORD_FILE: /run/secrets/db_password
     volumes:
       - pgdata:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD", "pg_isready", "-U", "postgres"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
 
   redis:
     image: redis:alpine
     ports:
       - "6379:6379"
+
+secrets:
+  db_password:
+    file: ./db_password.txt
 
 volumes:
   pgdata:
