--- a/Dockerfile.web
+++ b/Dockerfile.web
@@ -6,7 +6,7 @@ WORKDIR /app
 
 # Cache dependencies
 COPY frontend/package*.json ./
-RUN npm ci --only=production
+RUN npm install --omit=dev
 
 # Copy application code
 COPY frontend/ .
